--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 ---
+notifications:
+  slack:
+    on_failure: always
+
 matrix:
   fast_finish: true
   include:
@@ -12,9 +16,6 @@ matrix:
         - virtualenv -p $(which python3) ~venvpy3
         - source ~venvpy3/bin/activate
       install:
-        - pip3 install -U pip
-        - pip3 install -U pytest
-        - pip3 install codecov
         - pip install -r requirements.txt
       script:
         - set -x
@@ -37,6 +38,10 @@ matrix:
       script:
         - set -x
         - curl -fsSL https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.sh
+        - xmake create -l c -P ./test_xmake
+        - xmake
+        - xmake run test_xmake
+        - xmake run -d test_xmake
       after_success:
         - deactivate
 
@@ -49,8 +54,13 @@ matrix:
         - virtualenv -p $(which python2) ~venvpy2
         - source ~venvpy2/bin/activate
       install:
+        - pip install -r requirements.txt
         - brew install xmake
-      script: skip
+      script:
+        - xmake create -l c -P ./test_xmake
+        - xmake
+        - xmake run test_xmake
+        - xmake run -d test_xmake
       after_success: skip
 
     - name: "Python 3.7.5 on macOS xcode10.2"
@@ -62,8 +72,13 @@ matrix:
         - virtualenv -p $(which python3) ~venvpy3
         - source ~venvpy3/bin/activate
       install:
+        - pip install -r requirements.txt
         - brew install xmake
-      script: skip
+      script:
+        - xmake create -l c -P ./test_xmake
+        - xmake
+        - xmake run test_xmake
+        - xmake run -d test_xmake
       after_success: skip
 
 
@@ -76,38 +91,41 @@ matrix:
         - virtualenv -p $(which python3) ~venvpy3
         - source ~venvpy3/bin/activate
       install:
+        - pip install -r requirements.txt
         - brew install xmake
-      script: skip
+      script:
+        - xmake create -l c -P ./test_xmake
+        - xmake
+        - xmake run test_xmake
+        - xmake run -d test_xmake        
       after_success: skip
 
-    - name: "Python 3.8 on Windows"
-      os: windows           
-      language: shell
-      env:
-        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
-      before_install:
-        - choco install python --version 3.8.1
-        - python -m pip install --upgrade pip
-        - pip3 install --upgrade pytest
-        - pip3 install codecov
-        - pip3 install virtualenv
-        - virtualenv $HOME/venvpy3
-        - source $HOME/venvpy3/Scripts/activate
-      install:
-        - Invoke-Expression (Invoke-Webrequest 'https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.ps1' -UseBasicParsing).Content
-      script: skip
-      after_success: skip
-
-    - name: "Python 3.7 pinned chocolatey package on Windows"
-      os: windows
-      language: shell
-      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
-      before_install:
-        - Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh') #Make sure PowerShell 5 (or later, include PowerShell Core) and .NET Framework 4.5 (or later) are installed
-        - Set-ExecutionPolicy RemoteSigned -scope CurrentUser #change the execution policy (i.e. enable Powershell)
-        - virtualenv $HOME/venv
-        - source $HOME/venv/Scripts/activate
-      install:
-        - scoop install xmake
-      script: skip
-      after_success: skip
+    # - name: "Python 3.8 on Windows"
+    #   os: windows
+    #   language: shell
+    #   env:
+    #     - PATH=/c/Python38:/c/Python38/Scripts:$PATH
+    #   before_install:
+    #     - choco install python --version 3.8.1
+    #     - python -m pip install --upgrade pip
+    #     - pip3 install virtualenv
+    #     - virtualenv $HOME/venvpy3
+    #     - source $HOME/venvpy3/Scripts/activate
+    #   install:
+    #     - Invoke-Expression (Invoke-Webrequest 'https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.ps1' -UseBasicParsing).Content
+    #   script: skip
+    #   after_success: skip
+    #
+    # - name: "Python 3.7 pinned chocolatey package on Windows"
+    #   os: windows
+    #   language: shell
+    #   env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
+    #   before_install:
+    #     - Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh') #Make sure PowerShell 5 (or later, include PowerShell Core) and .NET Framework 4.5 (or later) are installed
+    #     - Set-ExecutionPolicy RemoteSigned -scope CurrentUser #change the execution policy (i.e. enable Powershell)
+    #     - virtualenv $HOME/venv
+    #     - source $HOME/venv/Scripts/activate
+    #   install:
+    #     - scoop install xmake
+    #   script: skip
+    #   after_success: skip
