--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,12 @@ matrix:
       script:
         - set -x
         - "wget https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.sh -O -"
-        - xmake create -l c -P ./test_xmake
-        - xmake
-        - xmake run test_xmake
-        - xmake run -d test_xmake
+        # - xmake create -l c -P ./test_xmake
+        # - xmake
+        # - xmake run test_xmake
+        # - xmake run -d test_xmake
+      after_success:
+        - deactivate
 
     - name: "Python 2.7 on xenial"
       dist: xenial
@@ -38,10 +40,10 @@ matrix:
       script:
         - set -x
         - curl -fsSL https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.sh
-        - xmake create -l c -P ./test_xmake
-        - xmake
-        - xmake run test_xmake
-        - xmake run -d test_xmake
+      #   - xmake create -l c -P ./test_xmake
+      #   - xmake
+      #   - xmake run test_xmake
+      #   - xmake run -d test_xmake
       after_success:
         - deactivate
 
@@ -56,11 +58,11 @@ matrix:
       install:
         - pip install -r requirements.txt
         - brew install xmake
-      script:
-        - xmake create -l c -P ./test_xmake
-        - xmake
-        - xmake run test_xmake
-        - xmake run -d test_xmake
+      script: skip
+        # - xmake create -l c -P ./test_xmake
+        # - xmake
+        # - xmake run test_xmake
+        # - xmake run -d test_xmake
       after_success: skip
 
     - name: "Python 3.7.5 on macOS xcode10.2"
@@ -74,11 +76,11 @@ matrix:
       install:
         - pip install -r requirements.txt
         - brew install xmake
-      script:
-        - xmake create -l c -P ./test_xmake
-        - xmake
-        - xmake run test_xmake
-        - xmake run -d test_xmake
+      script: skip
+        # - xmake create -l c -P ./test_xmake
+        # - xmake
+        # - xmake run test_xmake
+        # - xmake run -d test_xmake
       after_success: skip
 
 
@@ -93,39 +95,39 @@ matrix:
       install:
         - pip install -r requirements.txt
         - brew install xmake
-      script:
-        - xmake create -l c -P ./test_xmake
-        - xmake
-        - xmake run test_xmake
-        - xmake run -d test_xmake        
+      script: skip
+        # - xmake create -l c -P ./test_xmake
+        # - xmake
+        # - xmake run test_xmake
+        # - xmake run -d test_xmake
       after_success: skip
 
-    # - name: "Python 3.8 on Windows"
-    #   os: windows
-    #   language: shell
-    #   env:
-    #     - PATH=/c/Python38:/c/Python38/Scripts:$PATH
-    #   before_install:
-    #     - choco install python --version 3.8.1
-    #     - python -m pip install --upgrade pip
-    #     - pip3 install virtualenv
-    #     - virtualenv $HOME/venvpy3
-    #     - source $HOME/venvpy3/Scripts/activate
-    #   install:
-    #     - Invoke-Expression (Invoke-Webrequest 'https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.ps1' -UseBasicParsing).Content
-    #   script: skip
-    #   after_success: skip
-    #
-    # - name: "Python 3.7 pinned chocolatey package on Windows"
-    #   os: windows
-    #   language: shell
-    #   env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
-    #   before_install:
-    #     - Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh') #Make sure PowerShell 5 (or later, include PowerShell Core) and .NET Framework 4.5 (or later) are installed
-    #     - Set-ExecutionPolicy RemoteSigned -scope CurrentUser #change the execution policy (i.e. enable Powershell)
-    #     - virtualenv $HOME/venv
-    #     - source $HOME/venv/Scripts/activate
-    #   install:
-    #     - scoop install xmake
-    #   script: skip
-    #   after_success: skip
+    - name: "Python 3.8 pinned chocolatey package on Windows"
+      os: windows
+      language: shell
+      env:
+        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      before_install:
+        - choco install python --version 3.8.1
+        - python -m pip install --upgrade pip
+        - pip3 install virtualenv
+        - virtualenv $HOME/venvpy3
+        - source $HOME/venvpy3/Scripts/activate
+      install: skip
+        # - Invoke-Expression (Invoke-Webrequest 'https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.ps1' -UseBasicParsing).Content
+      script: skip
+      after_success: skip
+
+    - name: "Python 3.7  on Windows"
+      os: windows
+      language: shell
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
+      before_install:
+        - virtualenv $HOME/venv
+        - source $HOME/venv/Scripts/activate
+      install:
+        - scoop install xmake
+        - Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh') #Make sure PowerShell 5 (or later, include PowerShell Core) and .NET Framework 4.5 (or later) are installed
+        - Set-ExecutionPolicy RemoteSigned -scope CurrentUser #change the execution policy (i.e. enable Powershell)
+      script: skip
+      after_success: skip
