--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,7 @@ matrix:
       language: shell
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
       before_install:
-        - choco install python --version 3.7
+        - choco install python 
         - python --version
         - pip3 install virtualenv
         - virtualenv $HOME/venv
