C:\Users\travis\xmake\xmake

--- a/.travis.yml
+++ b/.travis.yml
@@ -122,7 +122,9 @@ matrix:
     - name: "Python 3.7  on Windows"
       os: windows
       language: shell
-      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
+      env:
+        - PATH=/c/Python27:/c/Python27/Scripts:$PATH
+        - PATH=/c/Python27:/c/Python27/Scripts:$PATH
       before_install:
         - choco install python2 --version 2.7.17
         - python --version
@@ -133,7 +135,7 @@ matrix:
         - pip install -r requirements.txt
         - PowerShell -Command 'Set-ExecutionPolicy -ExecutionPolicy RemoteSigned'
         - PowerShell -Command 'Invoke-Expression (Invoke-Webrequest 'https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.ps1' -UseBasicParsing).Content'
-        - xmake create -t console_tbox test
+        - C:\Users\travis\xmake\xmake create -t console_tbox test
         - cd test
         - xmake
         # - scoop install xmake
