--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ matrix:
       script:
         - set -x
         - "wget https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.sh -O -"
-        - xmake f -p iphoneos -y # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
-        - xmake -y
+        - xmake f -p iphoneos # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
+        - xmake
         # - xmake create -l c -P ./test_xmake
         # - xmake
         # - xmake run test_xmake
@@ -140,8 +140,8 @@ matrix:
         - xmake create -t console_tbox test
         - cd test
         - xmake -y
-        # - xmake f -p iphoneos -y # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
-        # - xmake -y
+        - xmake f -p iphoneos -y # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
+        - xmake -y
         # - xmake f -p android [--ndk=~/android-ndk-r16b] -y # Switch to the Android platform arm64-v8a architecture compilation
         # - xmake -y
         # - xmake f -m debug -y #mode.debug compile, xmake f is a shorthand for the xmake config
