--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ matrix:
       dist: bionic
       language: python
       python: 3.7
-      before_install:
+      before_install: skip
         - pip3 install virtualenv
         - virtualenv -p $(which python3) ~venvpy3
         - source ~venvpy3/bin/activate
-      install:
+      install: skip
         - pip install -r requirements.txt
       script:
         - set -x
@@ -127,14 +127,15 @@ matrix:
       env:
         - PATH=/c/Python27:/c/Python27/Scripts:$PATH
         - PATH=/c/Users/travis/xmake:$PATH
-      before_install:
+      before_install: skip
         - choco install python2 --version 2.7.17
         - python --version
         - pip install virtualenv
         - virtualenv $HOME/venv
         - source $HOME/venv/Scripts/activate
-      install:
+      install: skip
         - pip install -r requirements.txt
+      script:
         - PowerShell -Command 'Set-ExecutionPolicy -ExecutionPolicy RemoteSigned'
         - PowerShell -Command 'Invoke-Expression (Invoke-Webrequest 'https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.ps1' -UseBasicParsing).Content'
         - xmake create -t console_tbox test
@@ -148,5 +149,4 @@ matrix:
         # - scoop install xmake
         # - Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh') #Make sure PowerShell 5 (or later, include PowerShell Core) and .NET Framework 4.5 (or later) are installed
         # - Set-ExecutionPolicy RemoteSigned -scope CurrentUser #change the execution policy (i.e. enable Powershell)
-      script: skip
       after_success: skip
