xmake install bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 ---
+sudo: required
+
 notifications:
   slack:
     on_failure: always
@@ -11,6 +13,8 @@ matrix:
       dist: bionic
       language: python
       python: 3.7
+      env:
+      - XMAKE_VERSION="2.2.9"
       before_install: skip
         # - pip3 install virtualenv
         # - virtualenv -p $(which python3) ~venvpy3
@@ -19,7 +23,8 @@ matrix:
         # - pip install -r requirements.txt
       script:
         - set -x
-        - "wget https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.sh -O -"
+        - wget https://github.com/xmake-io/xmake/releases/download/v$XMAKE_VERSION/xmake-v$XMAKE_VERSION.amd64.deb
+        - sudo dpkg -i xmake-v2.2.9.amd64.deb
         - xmake f -p iphoneos # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
         - xmake
         # - xmake create -l c -P ./test_xmake
