--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 ---
-sudo: required
-
 notifications:
   slack:
     on_failure: always
@@ -23,9 +21,9 @@ matrix:
         # - pip install -r requirements.txt
       script:
         - wget https://github.com/xmake-io/xmake/releases/download/v$XMAKE_VERSION/xmake-v$XMAKE_VERSION.amd64.deb
-        - sudo dpkg -i xmake-v2.2.9.amd64.deb
-        - sudo xmake create test
-        - sudo xmake
+        - dpkg -i xmake-v2.2.9.amd64.deb
+        - xmake create test
+        - xmake
         # - xmake f -p iphoneos # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
         # - xmake
         # - xmake create -l c -P ./test_xmake
