--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,11 @@ matrix:
       script:
         - wget https://github.com/xmake-io/xmake/releases/download/v$XMAKE_VERSION/xmake-v$XMAKE_VERSION.amd64.deb
         - sudo dpkg -i xmake-v2.2.9.amd64.deb
+        -  xmake create -t quickapp_qt -l c ++ appdemo
+        - cd appdemo
         # - bash <(curl -fsSL https://raw.githubusercontent.com/tboox/xmake/master/scripts/get.sh)
-        - sudo xmake create -t console_tbox test && cd test
-        - sudo xmake
+        # - sudo xmake create -t console_tbox test && cd test
+        # - sudo xmake
         # - xmake f -p iphoneos # Switching to the iOS platform for compilation will reinstall the iOS version of the tbox library for linking
         # - xmake
         # - xmake create -l c -P ./test_xmake
